force-app/main/default/objects/Expense_Line_Item__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <label>Expense Report</label>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Expense Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>