force-app/main/default/objects/Expense_Line_Item__c/fields/GST_Taxes_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Taxes_Amount__c</fullName>
    <inlineHelpText>FOR AP OFFICE ONLY!!! The GST Taxes on the receipt. Do not include the taxes in the total amount.</inlineHelpText>
    <label>GST Taxes Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>