force-app/main/default/objects/Expense_Line_Item__c/fields/lod_Description__c.field-meta.xml
<CustomField>
    <fullName>lod_Description__c</fullName>
    <description>for Libra Expense reports</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>