force-app/main/default/objects/Expense_Line_Item__c/fields/Who_Paid__c.field-meta.xml
<CustomField>
    <fullName>Who_Paid__c</fullName>
    <label>Who Paid?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Paid</fullName>
            </value>
            <value>
                <fullName>Employee Paid</fullName>
                <default>true</default>
                <label>Employee Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>