force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Chargeback.recordType-meta.xml
<RecordType>
    <fullName>Chargeback</fullName>
    <active>false</active>
    <description>Billable expense</description>
    <label>Chargeback</label>
</RecordType>