force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Non_chargeback.recordType-meta.xml
<RecordType>
    <fullName>Non_chargeback</fullName>
    <active>true</active>
    <description>Non billable expense</description>
    <label>Non-chargeback</label>
</RecordType>