force-app/main/default/objects/Expense_Line_Item__c/validationRules/Add_Phone_Service_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Phone_Service_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>and(ISPICKVAL(  Category__c  , &quot;Phone&quot;), isnull(  Phone_Service_Dates__c ))</errorConditionFormula>
    <errorDisplayField>Phone_Service_Dates__c</errorDisplayField>
    <errorMessage>Please add the dates for your phone plan.</errorMessage>
</ValidationRule>