force-app/main/default/objects/Expense_Line_Item__c/validationRules/Amount_can_not_equal_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_can_not_equal_blank</fullName>
    <active>true</active>
    <errorConditionFormula>and(not ISPICKVAL(Category__c, &quot;Breda Employees&quot;),ISNULL(Amount__c),isnull( Miles__c))</errorConditionFormula>
    <errorMessage>Amount can not be blank. Please fill in the appropriate amount</errorMessage>
</ValidationRule>