force-app/main/default/objects/Expense_Line_Item__c/validationRules/Expense_Report_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Report_Status_Check</fullName>
    <active>true</active>
    <description>Salesforce.com NICC -022676</description>
    <errorConditionFormula>ISPICKVAL(Expense_Report__r.Status__c, &quot;To Finance&quot;)</errorConditionFormula>
    <errorMessage>No items can be added, or updated, when expense report status is set &quot;To Finance&quot;.</errorMessage>
</ValidationRule>