force-app/main/default/objects/Expense_Line_Item__c/validationRules/No_change_to_Line_items_if_submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>No_change_to_Line_items_if_submitted</fullName>
    <active>true</active>
    <errorConditionFormula>and(or(   ISPICKVAL(Expense_Report__r.Status__c, &quot;Submitted&quot;) ,ISPICKVAL(Expense_Report__r.Status__c, &quot;Approved&quot;) ), ISCHANGED( Amount__c ))</errorConditionFormula>
    <errorMessage>You can not change the amount of the Line Items once the expense report has been submitted or approved. Please recall the approval in order to make the changes.</errorMessage>
</ValidationRule>