force-app/main/default/objects/Expense_Line_Item__c/validationRules/No_change_to_who_Paid_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>No_change_to_who_Paid_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>and(or(   ISPICKVAL(Expense_Report__r.Status__c, &quot;Submitted&quot;) ,ISPICKVAL(Expense_Report__r.Status__c, &quot;Approved&quot;) ), ISCHANGED(  Who_Paid__c  ))</errorConditionFormula>
    <errorMessage>You can not change the field &quot;Who Paid&quot; in Line Items once the expense report has been submitted or approved. Please recall the approval in order to make the changes.</errorMessage>
</ValidationRule>