force-app/main/default/objects/Expense_Line_Item__c/validationRules/Require_Miles.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Miles</fullName>
    <active>true</active>
    <errorConditionFormula>and(ISPICKVAL( Sub_Category__c , &quot;Mileage&quot;), isnull(Miles__c))</errorConditionFormula>
    <errorDisplayField>Miles__c</errorDisplayField>
    <errorMessage>Please add the number of miles to your expense report</errorMessage>
</ValidationRule>